@@ -1,3 +1,9 @@
+2011-05-30  Georg-Johann Lay  <avr@gjlay.de>
+
+	PR target/45263
+	* config/avr/libgcc.S (__do_global_ctors, __do_global_dtors):
+	Don't use r20 around calls of __tablejump_elpm__
+
 2011-05-29  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	PR target/43700
